Fixed some more padding and sizing issues on mobile

--- a/project-02/style.css
+++ b/project-02/style.css
@@ -57,7 +57,7 @@ main {
 }
 
 .floating img {
-    width: 30%;
+    max-width: 40%;
     transition: transform 1s;
 }
 
@@ -281,20 +281,19 @@ footer a:hover{
     background-color: #ffffff;
 }
 
-@media (width <= 525) {
-    .nav li {
-        font-size: 1rem;
+@media (width <=500px) {
+    .logo {
+        font-size: 1.5rem;
+    }
+
+    nav a{
+        padding: 0px;
     }
 }
 
 @media (width <=625px) {
     .floating {
         padding-top: 20px;
-    }
-
-    .logo {
-        content: ZE;
-        font-size: 1.5rem;
     }
 
     body {
@@ -305,6 +304,9 @@ footer a:hover{
         font-size: 2rem;
     }
     
+    nav {
+        padding: 0px;
+    }
 }
 
 @media (width <=700px) {
